# unicorn-in-lab-stereo-calibration

./: README.md  collect_stereo_inlab.py  main.py  new.py  pyproject.toml  test_cameras.py
cpp_loader/: CMakeLists.txt  README.md  main.cpp  vcpkg.json
scripts/: check_all_properties.py  debug_intrinsics.py  get_camera_ids.py  reset_camera_props.py  scan_all_props.py  test_cameras.py  test_collect_diagnostic.py  test_focus.py  test_prop32.py
